--- a/team.html
+++ b/team.html
@@ -209,7 +209,7 @@
                 <p>Anup Dey</p>
                 <p class="title">Software Developer</p>
                 <ul>
-                  <li>3+ years experience
+                  <li>3+ years experience.
                       (App developer)
                   </li>
                   <li>Founder Rentkuribi, </li>
