--- a/team.html
+++ b/team.html
@@ -121,6 +121,9 @@
         font-weight: 600;
        
       }
+
+
+
     </style>
 </head>
 
@@ -205,7 +208,9 @@
               
               </div>
               <div class="card">
-                <img src="asset/anub.jpeg" alt="team3" class="image3" />
+                <div class="image3container">
+                    <img src="asset/anup.jpeg" alt="team3" class="image3" />
+                </div>
                 <p>Anup Dey</p>
                 <p class="title">Software Developer</p>
                 <ul>
@@ -218,7 +223,7 @@
                 </ul>
               </div>
               <div class="card">
-                <img src="asset/bipo.jpg" alt="team4" class="image4" />
+                <img src="asset/aboi.jpg" alt="team4" class="image4" />
                 <p>Bipothung Humtsoe</p>
                 <p class="title">Chief Software Developer</p>
                 <ul>
