--- a/index.html
+++ b/index.html
@@ -120,12 +120,25 @@
                                 <div data-animation="fade-in-left" data-delay="3s">Whether you're launching a new product, refining your go-to-market strategy, or seeking to optimize your technology stack,<br> we're here to help you navigate the complexities and accelerate your growth trajectory.</div>
                             </div>
                         </div>
+                        <div style="display: flex; gap: 15px;">
+
+                            <div class="dl-btn-group">
+                                <div class="inner-layer">
+                                    <a href="projects.html" class="dl-btn" data-animation="fade-in-left"
+                                    data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
+                                </div>
+                            </div>
+
+                        <!-- join intership starts here  -->
                         <div class="dl-btn-group">
                             <div class="inner-layer">
-                                <a href="projects.html" class="dl-btn" data-animation="fade-in-left"
-                                    data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN2VfQGYJgyKvkyMGF6z3bZN_FksSOQ-rTAdhGiWHtjJdFbA/viewform?usp=sf_link" class="dl-btn" data-animation="fade-in-left"
+                                data-delay="3.5s">INTERSHIP<i class="arrow_right"></i></a>
                             </div>
                         </div>
+                    </div>
+
+                        <!-- join intership ends here -->
                     </div>
                 </div>
             </div>
