--- a/services-2.html
+++ b/services-2.html
@@ -1,226 +1,262 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="TechiCynics">
-    <meta name="author" content="TechiCynics">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="TechiCynics" />
+    <meta name="author" content="TechiCynics" />
     <title>Tech iCynics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/Tech.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/Tech.png" />
 
-    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
 
-    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="css/themify-icons.css" />
 
-    <link rel="stylesheet" href="css/elegant-line-icons.css">
+    <link rel="stylesheet" href="css/elegant-line-icons.css" />
 
-    <link rel="stylesheet" href="css/elegant-font-icons.css">
+    <link rel="stylesheet" href="css/elegant-font-icons.css" />
 
-    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/flaticon.css" />
 
-    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/animate.min.css" />
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick.css" />
 
-    <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/slider.css" />
 
-    <link rel="stylesheet" href="css/odometer.min.css">
+    <link rel="stylesheet" href="css/odometer.min.css" />
 
-    <link rel="stylesheet" href="css/venobox/venobox.css">
+    <link rel="stylesheet" href="css/venobox/venobox.css" />
 
-    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.carousel.css" />
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css" />
 
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css" />
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="site-preloader-wrap">
-        <div class="spinner"></div>
+      <div class="spinner"></div>
     </div>
     <header class="header">
-        <div class="primary-header">
-            <div class="container">
-                <div class="primary-header-inner">
-                    <div class="header-logo">
-                        <a href="index.html"
-                            style="color: black; font-size: 20px; font-weight: bold; "><img src="img/Tech.png" alt="TechiCYnics" class="image-logo">TechiCynics</a>
-                    </div>
-                    <div class="header-menu-wrap">
-                        <ul class="dl-menu">
-                            <li><a href="index.html">Home</a>
-                            </li>
-                            <li><a href="#">About</a>
-                                <ul>
-                                    <li><a href="about-company.html">About Company</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="services-2.html">Services</a>
-                            </li>
-                            <li><a href="#">Pages</a>
-                                <ul>
-                                    <li><a href="projects.html">Our Projects</a></li>
-                                    <li><a href="team.html">Our Team</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="blog-grid.html">Blog</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="header-right">
-                        <a class="menu-btn" href="contact.html">Contact</a>
-
-                        <div class="mobile-menu-icon">
-                            <div class="burger-menu">
-                                <div class="line-menu line-half first-line"></div>
-                                <div class="line-menu"></div>
-                                <div class="line-menu line-half last-line"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <div class="primary-header">
+        <div class="container">
+          <div class="primary-header-inner">
+            <div class="header-logo">
+              <a
+                href="index.html"
+                style="color: black; font-size: 20px; font-weight: bold"
+                ><img
+                  src="img/Tech.png"
+                  alt="TechiCYnics"
+                  class="image-logo"
+                />TechiCynics</a
+              >
             </div>
+            <div class="header-menu-wrap">
+              <ul class="dl-menu">
+                <li><a href="index.html">Home</a></li>
+                <li>
+                  <a href="#">About</a>
+                  <ul>
+                    <li><a href="about-company.html">About Company</a></li>
+                  </ul>
+                </li>
+                <li><a href="services-2.html">Services</a></li>
+                <li>
+                  <a href="#">Pages</a>
+                  <ul>
+                    <li><a href="projects.html">Our Projects</a></li>
+                    <li><a href="team.html">Our Team</a></li>
+                  </ul>
+                </li>
+                <li><a href="blog-grid.html">Blog</a></li>
+              </ul>
+            </div>
+            <div class="header-right">
+              <a class="menu-btn" href="contact.html">Contact</a>
+
+              <div class="mobile-menu-icon">
+                <div class="burger-menu">
+                  <div class="line-menu line-half first-line"></div>
+                  <div class="line-menu"></div>
+                  <div class="line-menu line-half last-line"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </header>
     <section class="page-header padding">
-        <div class="container">
-            <div class="page-content text-center">
-                <h2>Our services</h2>
-                <p>Explore our services for your needs</p>
-            </div>
+      <div class="container">
+        <div class="page-content text-center">
+          <h2>Our services</h2>
+          <p>
+            From web design to digital marketing, we craft experiences that
+            resonate with your audience. Let's transform your vision into
+            reality and unlock your business's full potential today
+          </p>
         </div>
+      </div>
     </section>
     <section class="service-section section-2 bg-grey padding">
-        <div class="dots"></div>
-        <div class="container">
+      <div class="dots"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="row">
-                        <div class="col-lg-3 col-sm-6 padding-15">
-                            <div class="service-item box-shadow">
-                                <div class="service-icon">
-                                    <i class="fa fa-window-restore"></i>
-                                </div>
-                                <h3>UI/UX</h3>
-                                <p>Crafting seamless experiences, one pixel at a time.</p>
-                                <div class="overlay-icon">
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-6 padding-15">
-                            <div class="service-item box-shadow">
-                                <div class="service-icon">
-                                    <i class="fa fa-code"></i>
-                                </div>
-                                <h3>Web Development</h3>
-                                <p>Building the bridge between your vision and the digital world, one line of code at a time.</p>
-
-                                <div class="overlay-icon">
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-6 padding-15">
-                            <div class="service-item box-shadow">
-                                <div class="service-icon">
-                                    <i class="fa fa-mobile"></i>
-                                </div>
-                                <h3>App Development</h3>
-                                <p>Forging digital experiences that fits perfectly in the palm of your hands.</p>
-
-                                <div class="overlay-icon">
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-6 padding-15">
-                            <div class="service-item box-shadow">
-                                <div class="service-icon">
-                                    <i class="fa fa-microchip"></i>
-                                </div>
-                                <h3>Internet of Things</h3>
-                                <p>Bridging the physical and digital worlds, connecting a wide range of possibilities.
-                                </p>
-                                <div class="overlay-icon">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-sm-6 padding-15">
-                            <div class="service-item box-shadow">
-                                <div class="service-icon">
-                                    <i class="fa fa-cogs"></i>
-                                </div>
-                                <h3>Software Development</h3>
-                                <p>Where imagination meets functionality, and innovation becomes reality.
-                                </p>
-                                <div class="overlay-icon">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+              <div class="col-lg-3 col-sm-6 padding-15">
+                <div class="service-item box-shadow">
+                  <div class="service-icon">
+                    <i class="fa fa-window-restore"></i>
+                  </div>
+                  <h3>UI/UX</h3>
+                  <p>Crafting seamless experiences, one pixel at a time.</p>
+                  <div class="overlay-icon"></div>
                 </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 padding-15">
+                <div class="service-item box-shadow">
+                  <div class="service-icon">
+                    <i class="fa fa-code"></i>
+                  </div>
+                  <h3>Web Development</h3>
+                  <p>
+                    Building the bridge between your vision and the digital
+                    world, one line of code at a time.
+                  </p>
+
+                  <div class="overlay-icon"></div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 padding-15">
+                <div class="service-item box-shadow">
+                  <div class="service-icon">
+                    <i class="fa fa-mobile"></i>
+                  </div>
+                  <h3>App Development</h3>
+                  <p>
+                    Forging digital experiences that fits perfectly in the palm
+                    of your hands.
+                  </p>
+
+                  <div class="overlay-icon"></div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 padding-15">
+                <div class="service-item box-shadow">
+                  <div class="service-icon">
+                    <i class="fa fa-microchip"></i>
+                  </div>
+                  <h3>Internet of Things</h3>
+                  <p>
+                    Bridging the physical and digital worlds, connecting a wide
+                    range of possibilities.
+                  </p>
+                  <div class="overlay-icon"></div>
+                </div>
+              </div>
+              <div class="col-lg-3 col-sm-6 padding-15">
+                <div class="service-item box-shadow">
+                  <div class="service-icon">
+                    <i class="fa fa-cogs"></i>
+                  </div>
+                  <h3>Software Development</h3>
+                  <p>
+                    Where imagination meets functionality, and innovation
+                    becomes reality.
+                  </p>
+                  <div class="overlay-icon"></div>
+                </div>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </section>
 
     <section class="widget-section padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6 sm-padding">
-                    <div class="widget-content">
-
-                        <a href="index.html"
-                            style="color: white; font-size: 20px; font-weight: bold; "><img src="img/Tech.png" alt="Indico" class="image-logo"></a>
-                        <p style="color:#a7b3bd">Building your own applications is achievable now with TechiCynics. Come
-                            and be a part of us.</p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <h4>Company</h4>
-                        <ul class="widget-links">
-                            <li><a href="about-company.html">About Us</a></li>
-                            <li><a href="services-2.html">Our Services</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <h4>Headquater</h4>
-                        <p style="color:#a7b3bd">4th Mile Dimapur, Nagaland</p>
-                        <p style="color:#a7b3bd">techicynicsbusiness@gmail.com</p>
-
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <h4>Our Socials</h4>
-                        <span><a style="color: #a7b3bd;" href="https://instagram.com/techicynics?igshid=NTc4MTIwNjQ2YQ==" ><i class="ti-instagram"> Instagram</i> </a></span>
-                        <span><a  style="color:  #a7b3bd;" href=" https://www.youtube.com/channel/UCTbsUcesngwD7sMO0uweMYQ" > <i class="ti-youtube"> Youtube</i></a></span>
-                        <span><a  style="color:  #a7b3bd;" href="https://www.facebook.com/profile.php?id=100093682321092" ><i class="ti-facebook">Facebook</i> </a></span>
-                    </div>
-                </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <a
+                href="index.html"
+                style="color: white; font-size: 20px; font-weight: bold"
+                ><img src="img/Tech.png" alt="Indico" class="image-logo"
+              /></a>
+              <p style="color: #a7b3bd">
+                Building your own applications is achievable now with
+                TechiCynics. Come and be a part of us.
+              </p>
             </div>
+          </div>
+          <div class="col-lg-2 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <h4>Company</h4>
+              <ul class="widget-links">
+                <li><a href="about-company.html">About Us</a></li>
+                <li><a href="services-2.html">Our Services</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <h4>Headquater</h4>
+              <p style="color: #a7b3bd">4th Mile Dimapur, Nagaland</p>
+              <p style="color: #a7b3bd">techicynicsbusiness@gmail.com</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <h4>Our Socials</h4>
+              <span
+                ><a
+                  style="color: #a7b3bd"
+                  href="https://instagram.com/techicynics?igshid=NTc4MTIwNjQ2YQ=="
+                  ><i class="ti-instagram"> Instagram</i>
+                </a></span
+              >
+              <span
+                ><a
+                  style="color: #a7b3bd"
+                  href=" https://www.youtube.com/channel/UCTbsUcesngwD7sMO0uweMYQ"
+                >
+                  <i class="ti-youtube"> Youtube</i></a
+                ></span
+              >
+              <span
+                ><a
+                  style="color: #a7b3bd"
+                  href="https://www.facebook.com/profile.php?id=100093682321092"
+                  ><i class="ti-facebook">Facebook</i>
+                </a></span
+              >
+            </div>
+          </div>
         </div>
+      </div>
     </section>
     <footer class="footer-section align-center">
-        <div class="container">
-            <p>Designed and developed by TechiCynics. All rights reserved</p>
-        </div>
+      <div class="container">
+        <p>Designed and developed by TechiCynics. All rights reserved</p>
+      </div>
     </footer>
-    <a data-scroll href="#" id="scroll-to-top"><i class="arrow_carrot-up"></i></a>
+    <a data-scroll href="#" id="scroll-to-top"
+      ><i class="arrow_carrot-up"></i
+    ></a>
 
-    <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script
+      data-cfasync="false"
+      src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+    ></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
     <script src="js/vendor/bootstrap.min.js"></script>
@@ -246,6 +282,5 @@
     <script src="js/vendor/wow.min.js"></script>
 
     <script src="js/main.js"></script>
-</body>
-
+  </body>
 </html>
