--- a/index.html
+++ b/index.html
@@ -497,7 +497,16 @@
                             competitive environment. This is an opportunity you don't want to miss! Be sure to secure
                             your spot by registering today!
                         </p>
-                        <a href="contact.html" class="default-btn">Contact Us</a>
+                               <!-- join intership starts here  -->
+                               <div class="dl-btn-group"  >
+                                <div class="inner-layer" style="background-color: aquamarine; width: 120px; display: flex; justify-content: center;     background-color:#ff7607; height: 40px; align-items: center; " >
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfN2VfQGYJgyKvkyMGF6z3bZN_FksSOQ-rTAdhGiWHtjJdFbA/viewform?usp=sf_link" class="dl-btn" data-animation="fade-in-left"
+                                    data-delay="3.5s" style="color: white; font-size: 14px; font-family:source sans pro,sans-serif;">INTERNSHIP<i class="arrow_right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+    
+                            <!-- join intership ends here -->
                     </div>
                 </div>
             </div>
