--- a/contact.html
+++ b/contact.html
@@ -1,214 +1,261 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="TechiCynics">
-    <meta name="author" content="TechiCynics">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="TechiCynics" />
+    <meta name="author" content="TechiCynics" />
     <title>Tech iCynics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/Tech.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/Tech.png" />
 
-    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
 
-    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="css/themify-icons.css" />
 
-    <link rel="stylesheet" href="css/elegant-line-icons.css">
+    <link rel="stylesheet" href="css/elegant-line-icons.css" />
 
-    <link rel="stylesheet" href="css/elegant-font-icons.css">
+    <link rel="stylesheet" href="css/elegant-font-icons.css" />
 
-    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/flaticon.css" />
 
-    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/animate.min.css" />
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick.css" />
 
-    <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/slider.css" />
 
-    <link rel="stylesheet" href="css/odometer.min.css">
+    <link rel="stylesheet" href="css/odometer.min.css" />
 
-    <link rel="stylesheet" href="css/venobox/venobox.css">
+    <link rel="stylesheet" href="css/venobox/venobox.css" />
 
-    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.carousel.css" />
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css" />
 
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css" />
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="site-preloader-wrap">
-        <div class="spinner"></div>
+      <div class="spinner"></div>
     </div>
     <header class="header">
-        <div class="primary-header">
-            <div class="container">
-                <div class="primary-header-inner">
-                    <div class="header-logo">
-                        <a href="index.html"
-                            style="color: black; font-size: 20px; font-weight: bold; "><img src="img/Tech.png" alt="TechiCynics" class="image-logo">TechiCynics</a>
-                    </div>
-                    <div class="header-menu-wrap">
-                        <ul class="dl-menu">
-                            <li><a href="index.html">Home</a>
-
-
-                            </li>
-                            <li><a href="#">About</a>
-                                <ul>
-                                    <li><a href="about-company.html">About Company</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="services-2.html">Services</a>
-                            </li>
-                            <li><a href="#">Pages</a>
-                                <ul>
-                                    <li><a href="projects.html">Our Projects</a></li>
-                                    <li><a href="team.html">Our Team</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="blog-grid.html">Blog</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="header-right">
-                        <a class="menu-btn" href="contact.html">Contact</a>
-
-                        <div class="mobile-menu-icon">
-                            <div class="burger-menu">
-                                <div class="line-menu line-half first-line"></div>
-                                <div class="line-menu"></div>
-                                <div class="line-menu line-half last-line"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <div class="primary-header">
+        <div class="container">
+          <div class="primary-header-inner">
+            <div class="header-logo">
+              <a
+                href="index.html"
+                style="color: black; font-size: 20px; font-weight: bold"
+                ><img
+                  src="img/Tech.png"
+                  alt="TechiCynics"
+                  class="image-logo"
+                />TechiCynics</a
+              >
             </div>
+            <div class="header-menu-wrap">
+              <ul class="dl-menu">
+                <li><a href="index.html">Home</a></li>
+                <li>
+                  <a href="#">About</a>
+                  <ul>
+                    <li><a href="about-company.html">About Company</a></li>
+                  </ul>
+                </li>
+                <li><a href="services-2.html">Services</a></li>
+                <li>
+                  <a href="#">Pages</a>
+                  <ul>
+                    <li><a href="projects.html">Our Projects</a></li>
+                    <li><a href="team.html">Our Team</a></li>
+                  </ul>
+                </li>
+                <li><a href="blog-grid.html">Blog</a></li>
+              </ul>
+            </div>
+            <div class="header-right">
+              <a class="menu-btn" href="contact.html">Contact</a>
+
+              <div class="mobile-menu-icon">
+                <div class="burger-menu">
+                  <div class="line-menu line-half first-line"></div>
+                  <div class="line-menu"></div>
+                  <div class="line-menu line-half last-line"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </header>
     <div class="mapouter">
-        <div class="gmap_canvas">
-            <iframe width="100%" height="350" id="gmap_canvas" src="https://maps.google.com/maps?q=4th%20Mile%20Chumoukedima,%20Nagaland&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-            <a href="https://embedgooglemap.net/124/"></a>
-            <br>
-            <style>
-            .mapouter{
-                position:relative;
-                text-align:right;
-                height:350px;
-                width:100%;
-                }
-            </style>
-                <a href="https://www.embedgooglemap.net"></a>
-                <style>
-                    .gmap_canvas {
-                        overflow:hidden;
-                        background:none!important;
-                        height:350px;
-                        width:100%;
-                    }
-            </style>
-        </div>
+      <div class="gmap_canvas">
+        <iframe
+          width="100%"
+          height="350"
+          id="gmap_canvas"
+          src="https://maps.google.com/maps?q=4th%20Mile%20Chumoukedima,%20Nagaland&t=&z=13&ie=UTF8&iwloc=&output=embed"
+          frameborder="0"
+          scrolling="no"
+          marginheight="0"
+          marginwidth="0"
+        ></iframe>
+        <a href="https://embedgooglemap.net/124/"></a>
+        <br />
+        <style>
+          .mapouter {
+            position: relative;
+            text-align: right;
+            height: 350px;
+            width: 100%;
+          }
+        </style>
+        <a href="https://www.embedgooglemap.net"></a>
+        <style>
+          .gmap_canvas {
+            overflow: hidden;
+            background: none !important;
+            height: 350px;
+            width: 100%;
+          }
+        </style>
+      </div>
     </div>
     <section class="contact-section bg-grey padding">
-        <div class="dots"></div>
-        <div class="container">
-            <div class="contact-wrap d-flex align-items-center row">
-                <div class="col-md-6 padding-15">
-                    <div class="contact-info">
-                        <h2>Get in touch with us & send us message today!</h2>
-                        <p>You can find us everywhere!</p>
-                        <h3>Office <br>4th Mile Chumoukedima, Near KUC,Nagaland</h3>
-                        <h4><span>Email:</span> techicynicsbusiness@gmail.com</h4>
-                    </div>
-                </div>
-                <div class="col-lg-6 sm-padding">
-                    <ul class="about-promo">
-                        <li class="about-promo-item wow fadeInUp">
-                            <i class="ti-instagram" width=50 height=50></i>
-                            <div>
-                                <a href=" https://www.instagram.com/techicynics/">
-                                    <h3> INSTAGRAM </h3>
-                                </a>
-
-                            </div>
-                        </li>
-                        <li class="about-promo-item wow fadeInUp" data-wow-delay="300ms">
-                            <i class="ti-facebook"></i>
-                            <div>
-                                <a href=" https://www.facebook.com/profile.php?id=100093682321092">
-                                    <h3> FACEBOOK </h3>
-                                </a>
-                            </div>
-                        </li>
-
-                        <li class="about-promo-item wow fadeInUp" data-wow-delay="300ms">
-                            <i class="ti-youtube"></i>
-                            <div>
-                                <a href=" https://www.youtube.com/channel/UCTbsUcesngwD7sMO0uweMYQ">
-                                    <h3> YOUTUBE </h3>
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+      <div class="dots"></div>
+      <div class="container">
+        <div class="contact-wrap d-flex align-items-center row">
+          <div class="col-md-6 padding-15">
+            <div class="contact-info">
+              <h2>Get in touch with us & send us message today!</h2>
+              <p>You can find us everywhere!</p>
+              <h3>Office <br />4th Mile Chumoukedima, Near KUC,Nagaland</h3>
+              <h4><span>Email:</span> techicynicsbusiness@gmail.com</h4>
+              <h4>
+                <span>Call Us: </span
+                ><a href="tel:+917085243146" style="color: #263a4f"
+                  >7085243146</a
+                >
+              </h4>
             </div>
+          </div>
+          <div class="col-lg-6 sm-padding">
+            <ul class="about-promo">
+              <li class="about-promo-item wow fadeInUp">
+                <i class="ti-instagram" width="50" height="50"></i>
+                <div>
+                  <a href=" https://www.instagram.com/techicynics/">
+                    <h3>INSTAGRAM</h3>
+                  </a>
+                </div>
+              </li>
+              <li class="about-promo-item wow fadeInUp" data-wow-delay="300ms">
+                <i class="ti-facebook"></i>
+                <div>
+                  <a
+                    href=" https://www.facebook.com/profile.php?id=100093682321092"
+                  >
+                    <h3>FACEBOOK</h3>
+                  </a>
+                </div>
+              </li>
+
+              <li class="about-promo-item wow fadeInUp" data-wow-delay="300ms">
+                <i class="ti-youtube"></i>
+                <div>
+                  <a
+                    href=" https://www.youtube.com/channel/UCTbsUcesngwD7sMO0uweMYQ"
+                  >
+                    <h3>YOUTUBE</h3>
+                  </a>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
     </section>
     <section class="widget-section padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6 sm-padding">
-                    <div class="widget-content">
-
-                        <a href="index.html"
-                            style="color: white; font-size: 20px; font-weight: bold; "><img src="img/Tech.png" alt="Indico" class="image-logo"></a>
-                        <p style="color:#a7b3bd">Building your own applications is achievable now with TechiCynics. Come
-                            and be a part of us.</p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <h4>Company</h4>
-                        <ul class="widget-links">
-                            <li><a href="about-company.html">About Us</a></li>
-                            <li><a href="services-2.html">Our Services</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <h4>Headquater</h4>
-                        <p style="color:#a7b3bd">4th Mile Dimapur, Nagaland</p>
-                        <p style="color:#a7b3bd">techicynicsbusiness@gmail.com</p>
-
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <h4>Our Socials</h4>
-                        <span><a style="color: #a7b3bd;" href="https://instagram.com/techicynics?igshid=NTc4MTIwNjQ2YQ==" ><i class="ti-instagram"> Instagram</i> </a></span>
-                        <span><a  style="color:  #a7b3bd;" href=" https://www.youtube.com/channel/UCTbsUcesngwD7sMO0uweMYQ" > <i class="ti-youtube"> Youtube</i></a></span>
-                        <span><a  style="color:  #a7b3bd;" href="https://www.facebook.com/profile.php?id=100093682321092" ><i class="ti-facebook">Facebook</i> </a></span>
-                    </div>
-                </div>
-
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <a
+                href="index.html"
+                style="color: white; font-size: 20px; font-weight: bold"
+                ><img src="img/Tech.png" alt="Indico" class="image-logo"
+              /></a>
+              <p style="color: #a7b3bd">
+                Building your own applications is achievable now with
+                TechiCynics. Come and be a part of us.
+              </p>
             </div>
+          </div>
+          <div class="col-lg-2 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <h4>Company</h4>
+              <ul class="widget-links">
+                <li><a href="about-company.html">About Us</a></li>
+                <li><a href="services-2.html">Our Services</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <h4>Headquater</h4>
+              <p style="color: #a7b3bd">4th Mile Dimapur, Nagaland</p>
+              <p style="color: #a7b3bd">techicynicsbusiness@gmail.com</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <h4>Our Socials</h4>
+              <span
+                ><a
+                  style="color: #a7b3bd"
+                  href="https://instagram.com/techicynics?igshid=NTc4MTIwNjQ2YQ=="
+                  ><i class="ti-instagram"> Instagram</i>
+                </a></span
+              >
+              <span
+                ><a
+                  style="color: #a7b3bd"
+                  href=" https://www.youtube.com/channel/UCTbsUcesngwD7sMO0uweMYQ"
+                >
+                  <i class="ti-youtube"> Youtube</i></a
+                ></span
+              >
+              <span
+                ><a
+                  style="color: #a7b3bd"
+                  href="https://www.facebook.com/profile.php?id=100093682321092"
+                  ><i class="ti-facebook">Facebook</i>
+                </a></span
+              >
+            </div>
+          </div>
         </div>
+      </div>
     </section>
     <footer class="footer-section align-center">
-        <div class="container">
-            <p>Designed and developed by TechiCynics. All rigthts reserved</p>
-        </div>
+      <div class="container">
+        <p>Designed and developed by TechiCynics. All rigthts reserved</p>
+      </div>
     </footer>
-    <a data-scroll href="#" id="scroll-to-top"><i class="arrow_carrot-up"></i></a>
+    <a data-scroll href="#" id="scroll-to-top"
+      ><i class="arrow_carrot-up"></i
+    ></a>
 
-    <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script
+      data-cfasync="false"
+      src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+    ></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
     <script src="js/vendor/bootstrap.min.js"></script>
@@ -234,6 +281,5 @@
     <script src="js/vendor/wow.min.js"></script>
 
     <script src="js/main.js"></script>
-</body>
-
+  </body>
 </html>
