--- a/contact.html
+++ b/contact.html
@@ -148,8 +148,8 @@
           <div class="col-md-6 padding-15">
             <div class="contact-form">
               <form
-                action=" something required here to connect to back end"
-                method="post"
+                action="https://formsubmit.co/techicynicsbusiness@gmail.com"
+                method="POST"
                 id="ajax_form"
                 class="form-horizontal"
               >
