--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <div class="dl-btn-group">
                                 <div class="inner-layer">
                                     <a href="projects.html" class="dl-btn" data-animation="fade-in-left"
-                                    data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
+                                    data-delay="3.5s">Projects <i class="arrow_right"></i></a>
                                 </div>
                             </div>
 
@@ -172,7 +172,7 @@
                         <div class="dl-btn-group">
                             <div class="inner-layer">
                                 <a href="projects.html" class="dl-btn" data-animation="fade-in-bottom"
-                                    data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
+                                    data-delay="3.5s">Projects <i class="arrow_right"></i></a>
                             </div>
                         </div>
 
@@ -208,7 +208,7 @@
                         <div class="dl-btn-group">
                             <div class="inner-layer">
                                 <a href="projects.html" class="dl-btn" data-animation="fade-in-right"
-                                    data-delay="3.5s">View Projects <i class="arrow_right"></i></a>
+                                    data-delay="3.5s">Projects <i class="arrow_right"></i></a>
                             </div>
                         </div>
 
