--- a/team.html
+++ b/team.html
@@ -184,9 +184,8 @@
         </div>
     </header>
     <section class="page-header1 padding">
-        <div class="container">
+        <div class="container" style="display: flex; justify-content: center; position: absolute; bottom:10px;left:50%;   transform: translateX(-50%);">
             <div class="page-content text-center">
-                <h2>Our Team</h2>
                 <p style="font-size: larger; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"><i>"Stronger together, our team embodies innovation, dedication, and unity in pursuit of excellence".</i></p>
             </div>
         </div>
