--- a/App Projects.html
+++ b/App Projects.html
@@ -110,10 +110,10 @@
                 <img src="img/Ao1.jpg" alt="img" style="object-fit: fill" />
               </div>
               <div class="single-carousel">
-                <img src="img/TBA2.jpg" alt="img" />
+                <img src="img/Ao2.jpg" alt="img" />
               </div>
               <div class="single-carousel">
-                <img src="img/27.png" alt="img" />
+                <img src="img/TBA3.jpg" alt="img" />
               </div>
             </div>
           </div>
