--- a/projects.html
+++ b/projects.html
@@ -124,7 +124,7 @@
                         <a href="App Projects.html" class="view-icon"> <i class="fas fa-expand"></i></a>
                         <div class="projects-content">
                             <a href="App Projects.html" class="category">App Development</a>
-                            <h3><a href="App Projects.html" class="tittle"></a></h3>
+                            <h3><a href="UI.html" class="tittle"></a></h3>
                         </div>
                     </div>
                 </div>
