--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@
                     <div class="project-item">
                         <img src="img/17.png" alt="projects">
                         <div class="overlay"></div>
-                        <a href="App Projects.html" class="view-icon"> <i class="fas fa-expand"></i></a>
+                        <a href="UI.html" class="view-icon"> <i class="fas fa-expand"></i></a>
                         <div class="projects-content">
                             <a href="App Projects.html" class="category">App Development</a>
                             <h3><a href="UI.html" class="tittle"></a></h3>
