--- a/projects.html
+++ b/projects.html
@@ -119,14 +119,16 @@
                 </div>
                 <div class="col-lg-4 col-sm-6 padding-15">
                     <div class="project-item">
+                        <a href="UI.html">
                         <img src="img/17.png" alt="projects">
                         <div class="overlay"></div>
-                        <a href="App Projects.html" class="view-icon"> <i class="fas fa-expand"></i></a>
+                        <a href="UI.html" class="view-icon"> <i class="fas fa-expand"></i></a>
                         <div class="projects-content">
                             <a href="UI.html" class="category">App Development</a>
                             <h3><a href="UI.html" class="tittle"></a></h3>
                         </div>
                     </div>
+                </a>
                 </div>
                 <div class="col-lg-4 col-sm-6 padding-15">
                     <div class="project-item">
