--- a/team.html
+++ b/team.html
@@ -156,6 +156,7 @@
                             </li>
                             <li><a href="#">Pages</a>
                                 <ul>
+                                    <li><a href="Internship.html">Internship</a></li>
                                     <li><a href="projects.html">Our Projects</a></li>
 
                                     <li><a href="team.html">Our Team</a></li>
