--- a/App Projects.html
+++ b/App Projects.html
@@ -70,7 +70,9 @@
                 <li>
                   <a href="#">Pages</a>
                   <ul>
+                    <li><a href="Internship.html">Internship</a></li>
                     <li><a href="projects.html">Our Projects</a></li>
+
                     <li><a href="team.html">Our Team</a></li>
                   </ul>
                 </li>
