--- a/Iot projects.html
+++ b/Iot projects.html
@@ -65,9 +65,13 @@
                             </li>
                             <li><a href="#">Pages</a>
                                 <ul>
+                                    <li><a href="Internship.html">Internship</a></li>
                                     <li><a href="projects.html">Our Projects</a></li>
+
                                     <li><a href="team.html">Our Team</a></li>
+
                                 </ul>
+                            </li>
                             </li>
                             <li><a href="blog-grid.html">Blog</a>
                             </li>
