--- a/about-company.html
+++ b/about-company.html
@@ -66,8 +66,11 @@
                             </li>
                             <li><a href="#">Pages</a>
                                 <ul>
+                                    <li><a href="Internship.html">Internship</a></li>
                                     <li><a href="projects.html">Our Projects</a></li>
+
                                     <li><a href="team.html">Our Team</a></li>
+
                                 </ul>
                             </li>
                             <li><a href="blog-grid.html">Blog</a>
