--- a/testimonial.html
+++ b/testimonial.html
@@ -1,208 +1,230 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="TechiCynics">
-    <meta name="author" content="TechiCynics">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="TechiCynics" />
+    <meta name="author" content="TechiCynics" />
     <title>Tech iCynics</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/Tech.png">
+    <link rel="shortcut icon" type="image/x-icon" href="img/Tech.png" />
 
-    <link rel="stylesheet" href="css/fontawesome.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
 
-    <link rel="stylesheet" href="css/themify-icons.css">
+    <link rel="stylesheet" href="css/themify-icons.css" />
 
-    <link rel="stylesheet" href="css/elegant-line-icons.css">
+    <link rel="stylesheet" href="css/elegant-line-icons.css" />
 
-    <link rel="stylesheet" href="css/elegant-font-icons.css">
+    <link rel="stylesheet" href="css/elegant-font-icons.css" />
 
-    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/flaticon.css" />
 
-    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/animate.min.css" />
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
 
-    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick.css" />
 
-    <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/slider.css" />
 
-    <link rel="stylesheet" href="css/odometer.min.css">
+    <link rel="stylesheet" href="css/odometer.min.css" />
 
-    <link rel="stylesheet" href="css/venobox/venobox.css">
+    <link rel="stylesheet" href="css/venobox/venobox.css" />
 
-    <link rel="stylesheet" href="css/owl.carousel.css">
+    <link rel="stylesheet" href="css/owl.carousel.css" />
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css" />
 
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css" />
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="site-preloader-wrap">
-        <div class="spinner"></div>
+      <div class="spinner"></div>
     </div>
     <header class="header">
-        <div class="primary-header">
-            <div class="container">
-                <div class="primary-header-inner">
-                    <div class="header-logo">
-                        <a href="index.html"><img src="img/Tech.png" class="image-logo" alt="TechiCYnics"></a>
-                    </div>
-                    <div class="header-menu-wrap">
-                        <ul class="dl-menu">
-                            <li><a href="index.html">Home</a>
-
-
-                            </li>
-                            <li><a href="#">About</a>
-                                <ul>
-                                    <li><a href="about-us.html">About Us</a></li>
-                                    <li><a href="about-company.html">About Company</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="services-2.html">Services</a>
-
-                            </li>
-                            <li><a href="#">Pages</a>
-                                <ul>
-                                    <li><a href="projects.html">Our Projects</a></li>
-
-                                    <li><a href="team.html">Our Team</a></li>
-                                    <li><a href="testimonial.html">Testimonial</a></li>
-                                    <li><a href="404.html">404 Error</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="blog-grid.html">Blog</a>
-                            </li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-                    <div class="header-right">
-                        <a class="menu-btn" href="contact.html">Request a Quote</a>
-
-                        <div class="mobile-menu-icon">
-                            <div class="burger-menu">
-                                <div class="line-menu line-half first-line"></div>
-                                <div class="line-menu"></div>
-                                <div class="line-menu line-half last-line"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+      <div class="primary-header">
+        <div class="container">
+          <div class="primary-header-inner">
+            <div class="header-logo">
+              <a href="index.html"
+                ><img src="img/Tech.png" class="image-logo" alt="TechiCYnics"
+              /></a>
             </div>
+            <div class="header-menu-wrap">
+              <ul class="dl-menu">
+                <li><a href="index.html">Home</a></li>
+                <li>
+                  <a href="#">About</a>
+                  <ul>
+                    <li><a href="about-us.html">About Us</a></li>
+                    <li><a href="about-company.html">About Company</a></li>
+                  </ul>
+                </li>
+                <li><a href="services-2.html">Services</a></li>
+                <li>
+                  <a href="#">Pages</a>
+                  <ul>
+                    <li><a href="projects.html">Our Projects</a></li>
+
+                    <li><a href="team.html">Our Team</a></li>
+                    <li><a href="testimonial.html">Testimonial</a></li>
+                    <li><a href="404.html">404 Error</a></li>
+                  </ul>
+                </li>
+                <li><a href="blog-grid.html">Blog</a></li>
+                <li><a href="contact.html">Contact</a></li>
+              </ul>
+            </div>
+            <div class="header-right">
+              <a class="menu-btn" href="contact.html">Request a Quote</a>
+
+              <div class="mobile-menu-icon">
+                <div class="burger-menu">
+                  <div class="line-menu line-half first-line"></div>
+                  <div class="line-menu"></div>
+                  <div class="line-menu line-half last-line"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </header>
     <section class="page-header padding">
-        <div class="container">
-            <div class="page-content text-center">
-                <h2>Clients reviews</h2>
-                <p>Here's what the client's say about us..</p>
-            </div>
+      <div class="container">
+        <div class="page-content text-center">
+          <h2>Clients reviews</h2>
+          <p>Here's what the client's say about us..</p>
         </div>
+      </div>
     </section>
     <section class="testimonial-section bg-grey padding">
-        <div class="dots"></div>
-        <div class="container">
-            <div id="testimonial-carousel" class="testimonial-carousel box-shadow owl-carousel">
-                <div class="testi-item d-flex align-items-center">
-                    <img src="img/testi-1.jpg" alt="img">
-                    <div class="testi-content">
-                        <p>"Thank you for guiding us through the construction process, understanding, and always ready
-                            to accommodate our needs. We love our new space and know that it was built by the very
-                            best!"</p>
-                        <h3>Kyle Frederick</h3>
-                        <ul class="rattings">
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                        </ul>
-                        <span>Director</span>
-                    </div>
-                    <i class="fa fa-quote-right"></i>
-                </div>
-                <div class="testi-item d-flex align-items-center">
-                    <img src="img/testi-2.jpg" alt="img">
-                    <div class="testi-content">
-                        <p>"Thank you for guiding us through the construction process, understanding, and always ready
-                            to accommodate our needs. We love our new space and know that it was built by the very
-                            best!"</p>
-                        <h3>Valentin Lacoste</h3>
-                        <ul class="rattings">
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                        </ul>
-                        <span>Director</span>
-                    </div>
-                    <i class="fa fa-quote-right"></i>
-                </div>
-                <div class="testi-item d-flex align-items-center">
-                    <img src="img/testi-3.jpg" alt="img">
-                    <div class="testi-content">
-                        <p>"Thank you for guiding us through the construction process, understanding, and always ready
-                            to accommodate our needs. We love our new space and know that it was built by the very
-                            best!"</p>
-                        <h3>José Carpio</h3>
-                        <ul class="rattings">
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                            <li><i class="fa fa-star"></i></li>
-                        </ul>
-                        <span>Director</span>
-                    </div>
-                    <i class="fa fa-quote-right"></i>
-                </div>
+      <div class="dots"></div>
+      <div class="container">
+        <div
+          id="testimonial-carousel"
+          class="testimonial-carousel box-shadow owl-carousel"
+        >
+          <div class="testi-item d-flex align-items-center">
+            <img src="img/testi-1.jpg" alt="img" />
+            <div class="testi-content">
+              <p>
+                "Thank you for guiding us through the construction process,
+                understanding, and always ready to accommodate our needs. We
+                love our new space and know that it was built by the very best!"
+              </p>
+              <h3>Kyle Frederick</h3>
+              <ul class="rattings">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+              </ul>
+              <span>Director</span>
             </div>
+            <i class="fa fa-quote-right"></i>
+          </div>
+          <div class="testi-item d-flex align-items-center">
+            <img src="img/testi-2.jpg" alt="img" />
+            <div class="testi-content">
+              <p>
+                "Thank you for guiding us through the construction process,
+                understanding, and always ready to accommodate our needs. We
+                love our new space and know that it was built by the very best!"
+              </p>
+              <h3>Valentin Lacoste</h3>
+              <ul class="rattings">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+              </ul>
+              <span>Director</span>
+            </div>
+            <i class="fa fa-quote-right"></i>
+          </div>
+          <div class="testi-item d-flex align-items-center">
+            <img src="img/testi-3.jpg" alt="img" />
+            <div class="testi-content">
+              <p>
+                "Thank you for guiding us through the construction process,
+                understanding, and always ready to accommodate our needs. We
+                love our new space and know that it was built by the very best!"
+              </p>
+              <h3>José Carpio</h3>
+              <ul class="rattings">
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+                <li><i class="fa fa-star"></i></li>
+              </ul>
+              <span>Director</span>
+            </div>
+            <i class="fa fa-quote-right"></i>
+          </div>
         </div>
+      </div>
     </section>
-    
+
     <section class="widget-section padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-3 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <a href="#"><img src="img/Tech.png" class="image-logo" alt="brand"></a>
-                        <p>Building your own applications is achievable now with TechiCynics. Come and be a part of us.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-2 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <h4>Company</h4>
-                        <ul class="widget-links">
-                            <li><a href="#">About Us</a></li>
-                            <li><a href="#">Our Services</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 sm-padding">
-                    <div class="widget-content">
-                        <h4>Headquaters</h4>
-                        <p>962 Fifth Avenue, 3rd Floor New York, NY10022</p>
-                        <span><a href="http://html.dynamiclayers.net/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a8e0cdc4c4c7e8e9c4cdd0c9fcc0cdc5cd86c6cddc">[email&#160;protected]</a></span>
-                        <span>(+123) 456 789 101</span>
-                    </div>
-                </div>
-              
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <a href="#"
+                ><img src="img/Tech.png" class="image-logo" alt="brand"
+              /></a>
+              <p>
+                Building your own applications is achievable now with
+                TechiCynics. Come and be a part of us.
+              </p>
             </div>
+          </div>
+          <div class="col-lg-2 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <h4>Company</h4>
+              <ul class="widget-links">
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Our Services</a></li>
+                <li><a href="#">Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-3 col-sm-6 sm-padding">
+            <div class="widget-content">
+              <h4>Headquaters</h4>
+              <p>962 Fifth Avenue, 3rd Floor New York, NY10022</p>
+              <span
+                ><a
+                  href="http://html.dynamiclayers.net/cdn-cgi/l/email-protection"
+                  class="__cf_email__"
+                  data-cfemail="a8e0cdc4c4c7e8e9c4cdd0c9fcc0cdc5cd86c6cddc"
+                  >[email&#160;protected]</a
+                ></span
+              >
+              <span>(+123) 456 789 101</span>
+            </div>
+          </div>
         </div>
+      </div>
     </section>
     <footer class="footer-section align-center">
-        <div class="container">
-            <p>Designed and developed by Tech iCynics. All rights reserved</p>
-        </div>
+      <div class="container">
+        <p>Designed and developed by Tech iCynics. All rights reserved</p>
+      </div>
     </footer>
-    <a data-scroll href="#" id="scroll-to-top"><i class="arrow_carrot-up"></i></a>
+    <a data-scroll href="#" id="scroll-to-top"
+      ><i class="arrow_carrot-up"></i
+    ></a>
 
-    <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+    <script
+      data-cfasync="false"
+      src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"
+    ></script>
     <script src="js/vendor/jquery-1.12.4.min.js"></script>
 
     <script src="js/vendor/bootstrap.min.js"></script>
@@ -228,5 +250,5 @@
     <script src="js/vendor/wow.min.js"></script>
 
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
