--- a/Internship.html
+++ b/Internship.html
@@ -3,37 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="TechiCynics">
+    <meta name="author" content="TechiCynics">
     <link rel="stylesheet" href="css/main.css" />
-    <title>Download Images</title>
-    <link rel="shortcut icon" type="image/x-icon" href="img/Tech.png" />
+    <title>Download Images</title>  <link rel="shortcut icon" type="image/x-icon" href="img/Tech.png">
 
-    <link rel="stylesheet" href="css/fontawesome.min.css" />
+    <link rel="stylesheet" href="css/fontawesome.min.css">
 
-    <link rel="stylesheet" href="css/themify-icons.css" />
+    <link rel="stylesheet" href="css/themify-icons.css">
 
-    <link rel="stylesheet" href="css/elegant-line-icons.css" />
+    <link rel="stylesheet" href="css/elegant-line-icons.css">
 
-    <link rel="stylesheet" href="css/elegant-font-icons.css" />
+    <link rel="stylesheet" href="css/elegant-font-icons.css">
 
-    <link rel="stylesheet" href="css/flaticon.css" />
+    <link rel="stylesheet" href="css/flaticon.css">
 
-    <link rel="stylesheet" href="css/animate.min.css" />
+    <link rel="stylesheet" href="css/animate.min.css">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="css/slick.css" />
+    <link rel="stylesheet" href="css/slick.css">
 
-    <link rel="stylesheet" href="css/slider.css" />
+    <link rel="stylesheet" href="css/slider.css">
 
-    <link rel="stylesheet" href="css/odometer.min.css" />
+    <link rel="stylesheet" href="css/odometer.min.css">
 
-    <link rel="stylesheet" href="css/venobox/venobox.css" />
+    <link rel="stylesheet" href="css/venobox/venobox.css">
 
-    <link rel="stylesheet" href="css/owl.carousel.css" />
+    <link rel="stylesheet" href="css/owl.carousel.css">
 
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/main.css">
 
-    <link rel="stylesheet" href="css/responsive.css" />
+    <link rel="stylesheet" href="css/responsive.css">
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     <style>
         /* Media query for screens smaller than 600px (adjust as needed) */
         @media (max-width: 600px) {
@@ -49,57 +51,61 @@
       </style>
   </head>
   <body>
+    <div class="site-preloader-wrap">
+        <div class="spinner"></div>
+    </div>
     <header class="header">
-      <div class="primary-header">
-        <div class="container">
-          <div class="primary-header-inner">
-            <div class="header-logo">
-              <a
-                href="index.html"
-                style="color: black; font-size: 20px; font-weight: bold"
-                ><img
-                  src="img/Tech.png"
-                  alt="TechiCYnics"
-                  class="image-logo"
-                />TechiCynics</a
-              >
-            </div>
-            <div class="header-menu-wrap">
-              <ul class="dl-menu">
-                <li><a href="index.html">Home</a></li>
-                <li>
-                  <a href="#">About</a>
-                  <ul>
-                    <li><a href="about-company.html">About Company</a></li>
-                  </ul>
-                </li>
-                <li><a href="services-2.html">Services</a></li>
-                <li>
-                  <a href="#">Pages</a>
-                  <ul>
-                    <li><a href="Internship.html">Internship</a></li>
-                    <li><a href="projects.html">Our Projects</a></li>
+        <div class="primary-header">
+            <div class="container">
+                <div class="primary-header-inner">
+                    <div class="header-logo">
 
-                    <li><a href="team.html">Our Team</a></li>
-                  </ul>
-                </li>
-                <li><a href="blog-grid.html">Blog</a></li>
-              </ul>
-            </div>
-            <div class="header-right">
-              <a class="menu-btn" href="contact.html">Contact</a>
+                        <a href="index.html"
+                            style="color: black; font-size: 20px; font-weight: bold; "><img src="img/Tech.png" alt="TechiCynics" class="image-logo">TechiCynics</a>
 
-              <div class="mobile-menu-icon">
-                <div class="burger-menu">
-                  <div class="line-menu line-half first-line"></div>
-                  <div class="line-menu"></div>
-                  <div class="line-menu line-half last-line"></div>
+                    </div>
+                    <div class="header-menu-wrap">
+                        <ul class="dl-menu">
+                            <li><a href="#">Home</a>
+
+
+                            </li>
+                            <li><a href="#">About</a>
+                                <ul>
+
+                                    <li><a href="about-company.html">About Company</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="services-2.html">Services</a>
+
+                            </li>
+                            <li><a href="#">Pages</a>
+                                <ul>
+                                    <li><a href="Internship.html">Internship</a></li>
+                                    <li><a href="projects.html">Our Projects</a></li>
+
+                                    <li><a href="team.html">Our Team</a></li>
+
+                                </ul>
+                            </li>
+                            <li><a href="blog-grid.html">Blog</a>
+                            </li>
+
+                    </div>
+                    <div class="header-right">
+                        <a class="menu-btn" href="contact.html">Contact</a>
+
+                        <div class="mobile-menu-icon">
+                            <div class="burger-menu">
+                                <div class="line-menu line-half first-line"></div>
+                                <div class="line-menu"></div>
+                                <div class="line-menu line-half last-line"></div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
-      </div>
     </header>
     <section
       class="service-section section-2 bg-grey padding"
@@ -369,5 +375,31 @@
           downloadSection.scrollIntoView({ behavior: "smooth" });
         });
     </script>
+     <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
+     <script src="js/vendor/jquery-1.12.4.min.js"></script>
+ 
+     <script src="js/vendor/bootstrap.min.js"></script>
+ 
+     <script src="js/vendor/tether.min.js"></script>
+ 
+     <script src="js/vendor/headroom.min.js"></script>
+ 
+     <script src="js/vendor/owl.carousel.min.js"></script>
+ 
+     <script src="js/vendor/smooth-scroll.min.js"></script>
+ 
+     <script src="js/vendor/venobox.min.js"></script>
+ 
+     <script src="js/vendor/jquery.ajaxchimp.min.js"></script>
+ 
+     <script src="js/vendor/slick.min.js"></script>
+ 
+     <script src="js/vendor/waypoints.min.js"></script>
+ 
+     <script src="js/vendor/odometer.min.js"></script>
+ 
+     <script src="js/vendor/wow.min.js"></script>
+ 
+     <script src="js/main.js"></script>
   </body>
 </html>
