--- a/Internship.html
+++ b/Internship.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="header-menu-wrap">
                         <ul class="dl-menu">
-                            <li><a href="#">Home</a>
+                            <li><a href="index.html">Home</a>
 
 
                             </li>
@@ -258,7 +258,7 @@
       </section>
 
       <section class="widget-section padding">
-        < class="container">
+        <div class="container">
           <div class="row">
             <div class="col-lg-3 col-sm-6 sm-padding">
               <div class="widget-content">
