--- a/about-company.html
+++ b/about-company.html
@@ -109,8 +109,7 @@
                     <div class="service-content wow fadeInLeft">
 
                         <h2>We are TechiCynics</h2>
-                        <p>Incepted in 2021 September 24, TechiCynics is a startup supported by the Edu-center School of
-                            Business and Department of Industries and Commerce Government of Nagaland. We are a tech
+                        <p>Incepted in 2021 September 24, TechiCynics is a startup supported by NIELIT KOHIMA  and Department of Industries and Commerce Government of Nagaland. We are a tech
                             startup that aims to approach and achieve different everyday problems solution in the field
                             of service solutions, software development, mobile development, web development, IOT and
                             many more
