--- a/Internship.html
+++ b/Internship.html
@@ -124,7 +124,7 @@
       </h1>
 
       <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
-        <img src="/img/summer1.jpeg" alt="" style=" max-width: 70%;" >
+        <img src="/img/summer.jpeg" alt="" style=" max-width: 70%;" >
       </div>
 
       <div
@@ -348,7 +348,7 @@
         document
           .getElementById("fullButton")
           .addEventListener("click", function () {
-            downloadImage("asset/not-added.png");
+            downloadImage("asset/fullstack.pdf");
           });
         document
           .getElementById("uxButton")
