--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
             <div class="slider-content-wrap d-flex align-items-center text-left">
                 <div class="container">
                     <div class="slider-content">
+                      
                         <div style="color:#f3f5f7"> <i>Connect, Innovate, Inspire</i></div>
                         <div class="dl-caption big">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-left" data-delay="2s">We provide outstanding</div>
+                                <div data-animation="fade-in-left" data-delay="2s">Providing</div>
                             </div>
                         </div>
                         <div class="dl-caption big">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-left" data-delay="2.5s">Software development services and
-                                    applications.</div>
+                                <div data-animation="fade-in-right" data-delay="2.5s">IT Solutions For Businesses</div>
                             </div>
                         </div>
                         <div class="dl-caption small">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-left" data-delay="3s">Whether you're launching a new product, refining your go-to-market strategy, or seeking to optimize your technology stack,<br> we're here to help you navigate the complexities and accelerate your growth trajectory.</div>
+                                <div data-animation="fade-in-left" data-delay="3s">From Web Development to App Development, Software Development and More <br> </div>
                             </div>
                         </div>
                         <div style="display: flex; gap: 10px;">
@@ -154,18 +154,17 @@
                         <div style="color:#f3f5f7"> <i>Connect, Innovate, Inspire</i></div>
                         <div class="dl-caption big">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-bottom" data-delay="2s">We are professional</div>
+                                <div data-animation="fade-in-bottom" data-delay="2s">Your </div>
                             </div>
                         </div>
                         <div class="dl-caption big">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-bottom" data-delay="2.5s">for building software
-                                    Applications.</div>
+                                <div data-animation="fade-in-bottom" data-delay="2.5s">TECH Partner</div>
                             </div>
                         </div>
                         <div class="dl-caption small">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-bottom" data-delay="3s">We leverage the latest technologies, industry best practices, and a collaborative approach to ensure that our clients receive solutions that are not only robust and scalable but also future-proof!</div>
+                                <div data-animation="fade-in-bottom" data-delay="3s">We leverage the latest technologies, industry best practices, and a collaborative approach to ensure that you receive solutions that are not only robust and scalable but also future-proof!</div>
                             </div>
                         </div>
       
@@ -191,18 +190,18 @@
                         <div style="color:#f3f5f7"> <i>Connect, Innovate, Inspire</i></div>
                         <div class="dl-caption big">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-right" data-delay="2s">We will be happy to take care</div>
+                                <div data-animation="fade-in-right" data-delay="2s">We are professional</div>
                             </div>
                         </div>
                         <div class="dl-caption big">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-right" data-delay="2.5s">of your Web, software Applications
-                                    problems.</div>
+                                <div data-animation="fade-in-right" data-delay="2.5s">for building software
+                                    Applications.</div>
                             </div>
                         </div>
                         <div class="dl-caption small">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-right" data-delay="3s">We're more than just a software development company – we're your trusted partner in innovation and success..</div>
+                                <div data-animation="fade-in-right" data-delay="3s">We're more than just a software development company – we're your trusted partner in innovation and technology.</div>
                             </div>
                         </div>
                         <div style="display: flex; gap: 15px; justify-content:end;">
@@ -234,10 +233,7 @@
                 <div class="col-lg-6 sm-padding">
                     <div class="about-content wow fadeInLeft">
                         <h2>Why TechiCynics</h2>
-                        <p>From humble beginnings to digital pioneers, our startup software company is rewriting the
-                            rules of innovation. With boundless creativity and a relentless drive for excellence, we are
-                            revolutionizing the tech industry one line of code at a time. Together, we are shaping the
-                            future of software and empowering businesses to thrive in the digital age.</p>
+                        <p>24/7 technical Support, Experienced professionals in UX/UI, Web Development, Software Development, App development, Internet of Things(IoT).</p>
                         <a href="about-company.html" class="default-btn">More About Us</a>
                     </div>
                 </div>
@@ -254,10 +250,13 @@
                         <li class="about-promo-item wow fadeInUp" data-wow-delay="300ms">
                             <i class="fa fa-user-plus"></i>
                             <div>
-                                <h3>Dedicated To Our Clients</h3>
-                                <p>Our dedication to our clients goes beyond providing exceptional service. It's about
-                                    understanding their needs, exceeding their expectations, and building long-lasting
-                                    partnerships based on trust, integrity, and mutual success..</p>
+                                <h3>Cost Efficient</h3>
+                                <p>Leverage latest technologies and streamlined processes.
+                                    Deliver premium IT services at economical costs.
+                                    Eliminate unnecessary expenditures.
+                                    Optimize resource utilization.
+                                    Maximize value for investment.
+                                    </p>
                             </div>
                         </li>
                         <li class="about-promo-item wow fadeInUp" data-wow-delay="500ms">
@@ -494,16 +493,13 @@
 
                         <h2>COME AND BE A PART OF OUR CODING BOOTCAMP</h2>
                         <p align="justify">
-                            Attention all aspiring developers and innovators! We extend a warm invitation to join our
-                            coding camp, where we will introduce you to the latest frameworks and languages in a
-                            competitive environment. This is an opportunity you don't want to miss! Be sure to secure
-                            your spot by registering today!
+                            Learn to code with Techicynics! Join our Coding Bootcamp and grow your skills this summer and winter. Get hands-on practice, guidance from Professionals, and work with a fun team. Boost your coding abilities and get ready for your future career. Don't miss this great chance to learn and gain experience with us at Techicynics!
                         </p>
                                <!-- join intership starts here  -->
                                <div class="dl-btn-group"  >
                                 <div class="inner-layer" style="background-color: aquamarine; width: 120px; display: flex; justify-content: center;     background-color:#ff7607; height: 40px; align-items: center; " >
                                     <a href="Internship.html" class="dl-btn" data-animation="fade-in-left"
-                                    data-delay="3.5s" style="color: white; font-size: 14px; font-family:source sans pro,sans-serif;">INTERNSHIP<i class="arrow_right"></i></a>
+                                    data-delay="3.5s" style="color: white; font-size: 14px; font-family:source sans pro,sans-serif;">INTERNSHIP <i class="arrow_right"></i></a>
                                 </div>
                             </div>
                         </div>
