--- a/about-company.html
+++ b/about-company.html
@@ -109,10 +109,7 @@
                     <div class="service-content wow fadeInLeft">
 
                         <h2>We are TechiCynics</h2>
-                        <p>Incepted in 2021 September 24, TechiCynics is a startup supported by NIELIT KOHIMA  and Department of Industries and Commerce Government of Nagaland. We are a tech
-                            startup that aims to approach and achieve different everyday problems solution in the field
-                            of service solutions, software development, mobile development, web development, IOT and
-                            many more
+                        <p>Incepted in 2021 September 24, TechiCynics is a startup supported by NIELIT KOHIMA  and Department of Industries and Commerce Government of Nagaland. Aiming to provide Tech Solutions for Buinesses to help them achieve their goals. Through our Experienced professionals we are Specialized in Web Development, Software Development, App development, Web Development, Internet of Things(IoT) and many more.
                         </p>
                         <a href="services-2.html" class="default-btn">Our All Services</a>
                     </div>
@@ -205,14 +202,10 @@
             <div class="row content-wrap">
                 <div class="col-lg-6 sm-padding">
                     <div class="content-info wow fadeInRight" data-wow-delay="300ms">
-                        <span>Explore The Features</span>
-                        <h2>Offering the most complete integrated package!</h2>
-                        <p>Embrace the power of seamless integration. Our software company offers the most complete
-                            integrated package, where every piece fits harmoniously to unlock unparalleled efficiency,
-                            productivity, and success. Experience the synergy of comprehensive solutions tailored to
-                            your needs, as we redefine what it means to deliver a truly cohesive and transformative
-                            experience.</p>
-                        <a href="contact.html" class="default-btn">Get Free Quote</a>
+                     
+                        <h2>GET IN TOUCH WITH US </h2>
+                        <p>Lets Talk About Your Project. We Are Here To Help. With our cost effective services without compromising on quality.</p>
+                        <a href="contact.html" class="default-btn">Contact Us</a>
                     </div>
                 </div>
                 <div class="col-lg-6 sm-padding wow fadeInLeft" data-wow-delay="100ms">
