--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <div style="color:#f3f5f7"> <i>Connect, Innovate, Inspire</i></div>
                         <div class="dl-caption big">
                             <div class="inner-layer">
-                                <div data-animation="fade-in-left" data-delay="2s">Providing</div>
+                                <div data-animation="fade-in-left" data-delay="2s">Russia</div>
                             </div>
                         </div>
                         <div class="dl-caption big">
