--- a/about-company.html
+++ b/about-company.html
@@ -109,7 +109,7 @@
                     <div class="service-content wow fadeInLeft">
 
                         <h2>We are TechiCynics</h2>
-                        <p>Incepted in 2021 September 24, TechiCynics is a startup supported by NIELIT KOHIMA  and Department of Industries and Commerce Government of Nagaland. Aiming to provide Tech Solutions for Buinesses to help them achieve their goals. Through our Experienced professionals we are Specialized in Web Development, Software Development, App development, Web Development, Internet of Things(IoT) and many more.
+                        <p>Incepted in 2021 September 24, TechiCynics is a startup supported by NIELIT KOHIMA  and Department of Industries and Commerce Government of Nagaland. Aiming to provide Tech Solutions for Buinesses to help them achieve their goals. Through our Experienced professionals we are Specialized in Web Development, Software Development, App development, Internet of Things(IoT) and many more.
                         </p>
                         <a href="services-2.html" class="default-btn">Our All Services</a>
                     </div>
