--- a/Internship.html
+++ b/Internship.html
@@ -50,9 +50,9 @@
       </style>
   </head>
   <body>
-    <div class="site-preloader-wrap">
+    <!-- <div class="site-preloader-wrap">
         <div class="spinner"></div>
-    </div>
+    </div> -->
     <header class="header">
         <div class="primary-header">
             <div class="container">
