--- a/Iot projects.html
+++ b/Iot projects.html
@@ -40,9 +40,9 @@
 </head>
 
 <body>
-    <div class="site-preloader-wrap">
+    <!-- <div class="site-preloader-wrap">
         <div class="spinner"></div>
-    </div>
+    </div> -->
     <header class="header">
         <div class="primary-header">
             <div class="container">
