--- a/Machievement.html
+++ b/Machievement.html
@@ -47,9 +47,9 @@
   </head>
 
   <body>
-    <div class="site-preloader-wrap">
+    <!-- <div class="site-preloader-wrap">
       <div class="spinner"></div>
-    </div>
+    </div> -->
     <header class="header">
       <div class="primary-header">
         <div class="container">
