--- a/blog-grid.html
+++ b/blog-grid.html
@@ -39,9 +39,9 @@
   </head>
 
   <body>
-    <div class="site-preloader-wrap">
+    <!-- <div class="site-preloader-wrap">
       <div class="spinner"></div>
-    </div>
+    </div> -->
     <header class="header">
       <div class="primary-header">
         <div class="container">
