--- a/projects.html
+++ b/projects.html
@@ -41,9 +41,9 @@
 
 <body>
 
-    <div class="site-preloader-wrap">
+    <!-- <div class="site-preloader-wrap">
         <div class="spinner"></div>
-    </div>
+    </div> -->
     <header class="header">
         <div class="primary-header">
             <div class="container">
