--- a/team.html
+++ b/team.html
@@ -211,7 +211,7 @@
               <div class="card">
                 <img src="asset/aboi.jpg" alt="team4" class="image4" />
                 <p>Bipothung Humtsoe</p>
-                <p class="title">Chief Software Developer</p>
+                <p class="title">Chief Developer</p>
                 
               </div>
               <div class="card">
